EDITING THE TEXT

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
-                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
-                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
+                                <li><a href="donate.html"><span><small>06</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>07</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -89,10 +89,11 @@
                             <div class="text-inner align-self-start">
 
                                 <h3 class="heading">Who we are</h3>
-                                <p><strong>Cilla World Charity (CWC) Foundation </strong> CWC Foundation is a Ghanaian based non-profit organization, which was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana,
-                                    West Africa. We focus on providing care and support for less privileged children and women in our communities. and as the Nation as whole. </p>
+                                <p><strong>Cilla World Charity (CWC) Foundation </strong> was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana, West Africa. </p>
                                 <p>Charity has always been a part of her and being able to give back to society has been her greatest joy. She met Henry, who believe in her dreams and also had the passion for giving, that was when Cilla World Charities Foundation
                                     came to a reality. </p>
+                                <p>The aim of this foundation is to care, support and provide for Children,women and the needy in our communities. Projects we undertake benefit the less privileged children and women and the community as a whole. </p>
+                                <p>We believe our programs will go a long way to bring hope and change in the lives of less privileged children and women in society.</p>
                                 <ul class="my-4">
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Mission</strong>
                                         <br>
@@ -100,7 +101,7 @@
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Vision</strong>
                                         <br>
-                                        <p>Projects we undertake benefit the less privileged children amd women and the community as a whole.</p>
+                                        <p>Projects we undertake benefit the less privileged children and women and the community as a whole.</p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span> <strong>Our Goals</strong>
                                         <br>
@@ -111,7 +112,7 @@
                                 </ul>
                                 <div class="row">
                                     <div class="col-md-12 ftco-animate">
-                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:400px">
+                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:250px">
                                             <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
                                         </div>
                                     </div>
