--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
-                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
-                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
-                                <!-- </li><a data-toggle="modal" data-target="#modalRequest">GO</a></li> -->
+                                <li><a href="donate.html"><span><small>06</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>07</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -152,8 +151,9 @@
                             <div class="text-inner align-self-start">
 
                                 <h3 class="heading">Who we are</h3>
-                                <p><strong>Cilla World Charity Foundation </strong> (CWC Foundation) is a Ghanaian based non-profit organization, which was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana, West
-                                    Africa. We focus on providing care and support for less privileged children and women in our communities. and as the Nation as whole. </p>
+                                <p><strong>Cilla World Charity Foundation </strong> (CWC Foundation) was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana, West Africa. The aim of this foundation is to care, support
+                                    and provide for less privileged children, women and the needy in our communities. </p>
+                                <p><a href="about.html" class="btn btn-primary px-4 py-3">Read More</a></p>
                                 <ul class="my-4">
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Mission</strong>
                                         <br>
@@ -161,7 +161,7 @@
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Vision</strong>
                                         <br>
-                                        <p>Projects we undertake benefit the less privileged children amd women and the community as a whole.</p>
+                                        <p>Projects we undertake benefit the less privileged children and women and the community as a whole.</p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span> <strong>Our Goals</strong>
                                         <br>
@@ -171,11 +171,11 @@
                                         </ul>
                                     </li>
                                 </ul>
-                                <p><a href="about.html" class="btn btn-primary px-4 py-3">Read More</a></p>
+                                <!-- <p><a href="about.html" class="btn btn-primary px-4 py-3">Read More</a></p> -->
 
                                 <div class="row">
-                                    <div class="col-md-12 ftco-animate">
-                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:400px">
+                                    <div class="col-md-10 ftco-animate">
+                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:220px">
                                             <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
                                         </div>
                                     </div>
@@ -546,6 +546,8 @@
     </script> -->
 
 </body>
+
+</html>
 
 </html>
 
