--- a/ceo.html
+++ b/ceo.html
@@ -45,12 +45,12 @@
                             <h1 class="mb-4"><a href="index.html" class="logo">Cilla World Charities Foundation<br><span>.... Humanity is love</span></a></h1>
                             <ul>
                                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                                <li><a href="about.html"><span><small>02</small>About</span></a></li>
+                                <li class="active"><a href="about.html"><span><small>02</small>About</span></a></li>
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
-                                <li class="active"><a href="blog.html"><span><small>04</small>Blog</span></a></li>
+                                <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
-                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
-                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
+                                <li><a href="donate.html"><span><small>06</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>07</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
